CREATE TABLE IF NOT EXISTS rasy (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    typ_zwierzecia VARCHAR(100) NOT NULL,
    rasa VARCHAR(100) NOT NULL
);

CREATE TABLE IF NOT EXISTS "role" (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nazwa VARCHAR(100) NOT NULL UNIQUE
);

CREATE TABLE IF NOT EXISTS uzytkownicy (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    email VARCHAR(255) NOT NULL UNIQUE,
    haslo_hash VARCHAR(255) NOT NULL,
    imie VARCHAR(100) NOT NULL,
    nazwisko VARCHAR(100) NOT NULL,
    rola_id INTEGER NOT NULL,
    czy_aktywny BOOLEAN NOT NULL DEFAULT TRUE,
    ostatnie_logowanie TIMESTAMP,
    data_utworzenia TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    data_modyfikacji TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_uzytkownicy_rola
        FOREIGN KEY (rola_id) REFERENCES "role"(id)
);

CREATE TABLE IF NOT EXISTS zwierzeta (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    imie VARCHAR(100) NOT NULL,
    wiek INTEGER,
    waga NUMERIC(10,2),
    plec VARCHAR(50),
    rasa_id INTEGER,
    status VARCHAR(100),
    opis TEXT,
    charakter TEXT,
    preferencje_zywieniowe TEXT,
    data_modyfikacji TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_zwierzeta_rasa
        FOREIGN KEY (rasa_id) REFERENCES rasy(id)
);

CREATE TABLE IF NOT EXISTS historia_medyczna (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    zwierze_id INTEGER NOT NULL,
    pracownik_id INTEGER NOT NULL,
    opis_zabiegu TEXT NOT NULL,
    data_wpisu TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_historia_medyczna_zwierze
        FOREIGN KEY (zwierze_id) REFERENCES zwierzeta(id),
    CONSTRAINT fk_historia_medyczna_pracownik
        FOREIGN KEY (pracownik_id) REFERENCES uzytkownicy(id)
);

CREATE TABLE IF NOT EXISTS rezerwacje_spacerow (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    wolontariusz_id INTEGER NOT NULL,
    zwierze_id INTEGER NOT NULL,
    data_spaceru DATE NOT NULL,
    godzina_start TIME NOT NULL,
    godzina_koniec TIME NOT NULL,
    uwagi TEXT,
    data_zapisu TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_rezerwacje_wolontariusz
        FOREIGN KEY (wolontariusz_id) REFERENCES uzytkownicy(id),
    CONSTRAINT fk_rezerwacje_zwierze
        FOREIGN KEY (zwierze_id) REFERENCES zwierzeta(id)
);

CREATE TABLE IF NOT EXISTS raporty_operacyjne (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    data_raportu DATE NOT NULL,
    sekretarz_id INTEGER NOT NULL,
    typ_raportu VARCHAR(100) NOT NULL,
    uwagi TEXT,
    CONSTRAINT fk_raporty_operacyjne_sekretarz
        FOREIGN KEY (sekretarz_id) REFERENCES uzytkownicy(id)
);

CREATE INDEX IF NOT EXISTS idx_uzytkownicy_rola_id
    ON uzytkownicy (rola_id);

CREATE INDEX IF NOT EXISTS idx_zwierzeta_rasa_id
    ON zwierzeta (rasa_id);

CREATE INDEX IF NOT EXISTS idx_historia_medyczna_zwierze_id
    ON historia_medyczna (zwierze_id);

CREATE INDEX IF NOT EXISTS idx_historia_medyczna_pracownik_id
    ON historia_medyczna (pracownik_id);

CREATE INDEX IF NOT EXISTS idx_rezerwacje_spacerow_wolontariusz_id
    ON rezerwacje_spacerow (wolontariusz_id);

CREATE INDEX IF NOT EXISTS idx_rezerwacje_spacerow_zwierze_id
    ON rezerwacje_spacerow (zwierze_id);

CREATE INDEX IF NOT EXISTS idx_raporty_operacyjne_sekretarz_id
    ON raporty_operacyjne (sekretarz_id);

INSERT INTO "role" (nazwa)
SELECT 'ADMIN'
WHERE NOT EXISTS (SELECT 1 FROM "role" WHERE nazwa = 'ADMIN');

INSERT INTO "role" (nazwa)
SELECT 'PRACOWNIK'
WHERE NOT EXISTS (SELECT 1 FROM "role" WHERE nazwa = 'PRACOWNIK');

INSERT INTO "role" (nazwa)
SELECT 'WOLONTARIUSZ'
WHERE NOT EXISTS (SELECT 1 FROM "role" WHERE nazwa = 'WOLONTARIUSZ');

INSERT INTO "role" (nazwa)
SELECT 'GOSC'
WHERE NOT EXISTS (SELECT 1 FROM "role" WHERE nazwa = 'GOSC');

INSERT INTO rasy (typ_zwierzecia, rasa)
SELECT 'Pies', 'Labrador'
WHERE NOT EXISTS (
    SELECT 1 FROM rasy WHERE typ_zwierzecia = 'Pies' AND rasa = 'Labrador'
);

INSERT INTO rasy (typ_zwierzecia, rasa)
SELECT 'Kot', 'Kot europejski'
WHERE NOT EXISTS (
    SELECT 1 FROM rasy WHERE typ_zwierzecia = 'Kot' AND rasa = 'Kot europejski'
);